<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="action_backup_notes">Backup notes</string>
    <string name="action_upload_notes">Upload notes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_note_activity">Edit Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="communicate">Communicate</string>
    <string name="courses">Courses</string>
    <string name="notes">Notes</string>
    <string name="text_note_title">Note title</string>
    <string name="text_note_text">Note text</string>
    <string name="nav_send_message">Send</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_name">General</string>
    <string name="pref_name_default">Aggrey Ochieng</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="default_email_address">aggreyah@aggreyah.com</string>
    <string-array name="pref_entries_favorite_social">
        <item>Google+</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="pref_values_favorite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>
    <string name="pref_default_favorite_social">http://plus.google.com</string>
    <string name="pref_title_favorite_social">Favorite social network</string>
    <string name="pref_title_display_name">Display name</string>
</resources>
