<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_title_name">

        <EditTextPreference
            app:key="user_display_name"
            app:title="@string/pref_title_display_name"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/pref_name_default"
        />
        <EditTextPreference
            android:defaultValue="@string/default_email_address"
            android:key="user_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true"
            android:title="@string/pref_title_email_address" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_entries_favorite_social"
            android:entryValues="@array/pref_entries_favorite_social"
            android:key="user_favorite_social"
            app:useSimpleSummaryProvider="true"
            android:title="@string/pref_title_favorite_social" />

    </PreferenceCategory>

</PreferenceScreen>